--- a/My Assessment/Views/Department/Create.cshtml
+++ b/My Assessment/Views/Department/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@model MyAssessment.Core.ViewModels.DepartmentViewModel
 
 
-<div class="page-header">
-    <h1>Create New Department</h1>
+<div class="card-header text-center">
+    <h5>Create New Department</h5>
 </div>
 <form method="post" asp-action="Create" asp-controller="Department" asp-area="" enctype="multipart/form-data" class="ml-5">
     <div class="row">
@@ -15,6 +15,8 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
     <button type="submit" class="btn btn-primary">Save</button>
 
 </form>
