--- a/My Assessment/Views/Department/Index.cshtml
+++ b/My Assessment/Views/Department/Index.cshtml
@@ -11,9 +11,9 @@
         <div class="d-flex justify-content-between align-items-center flex-wrap">
             <a asp-action="Create" asp-controller="Department" asp-area="" class="btn btn-primary mb-4">Add New Department</a>
 
-            <form asp-action="Search" method="get" >
+            <form asp-action="Search" method="get">
                 <div class="row">
-                    <div >
+                    <div>
                         <select asp-items="ViewBag.Departments" name="departmentId"
                                 class="form-control" onchange="this.form.submit()">
                             <option value="">filter By Department</option>
@@ -24,12 +24,13 @@
         </div>
     </div>
 </div>
-<table id="productstable" class="table table-bordered table-hover table-striped">
+<table id="productsTable" class="table table-bordered table-hover table-striped">
     <thead>
         <tr>
             <th>Id</th>
             <th>Name</th>
             <th>Manager</th>
+            <th>Details</th>
             <th>Edit</th>
             <th>Delete</th>
         </tr>
@@ -51,6 +52,13 @@
                     <th>@department.Name</th>
                     <th>@department.Manager?.FullName</th>
                     <th>
+                        <button type="button" class="btn btn-primary"
+                                onclick="showDepartmentDetails(@department.Id)">
+                            Details
+                        </button>
+                    </th>
+
+                    <th>
                         <a asp-action="Update" asp-controller="Department" asp-route-id="@department.Id" class="btn btn-primary">Edit</a>
                     </th>
                     <th>
@@ -67,3 +75,37 @@
         }
     </tbody>
 </table>
+@section Scripts {
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.21/b-1.6.2/b-colvis-1.6.2/b-flash-1.6.2/b-html5-1.6.2/b-print-1.6.2/datatables.min.css" />
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.21/b-1.6.2/b-colvis-1.6.2/b-flash-1.6.2/b-html5-1.6.2/b-print-1.6.2/datatables.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#productsTable').DataTable();
+        });</script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script>
+    function showDepartmentDetails(departmentId) {
+        $.ajax({
+            url: '@Url.Action("Search", "Department")',
+            type: 'GET',
+            data: { departmentId: departmentId },
+            success: function (result) {
+                Swal.fire({
+                    title: 'Department Details',
+                    html: result, 
+                    width: '800px',
+                    showCloseButton: true,
+                    focusConfirm: false,
+                    confirmButtonText: 'Close'
+                });
+            },
+            error: function () {
+                Swal.fire('Error', 'Could not load department details.', 'error');
+            }
+        });
+    }
+    </script>
+
+}
