--- a/My Assessment/Views/Department/Update.cshtml
+++ b/My Assessment/Views/Department/Update.cshtml
@@ -1,8 +1,8 @@
 ﻿@model MyAssessment.Core.ViewModels.DepartmentViewModel
 
 
-<div class="page-header">
-    <h1>Edit Department Details</h1>
+<div class="card-header text-center">
+    <h6>Edit Department Details</h6>
 </div>
 <form method="post" asp-action="Update" asp-controller="Department" asp-area="" enctype="multipart/form-data" class="ml-5">
     <div class="row">
@@ -23,7 +23,43 @@
     </div>
 
     <input type="hidden" asp-for="Id" value="@Model.Id" />
-
+    <br/>
+    <br/>
     <button type="submit" class="btn btn-primary">Save</button>
 
 </form>
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#DepartmentName").on("blur", function () {
+                var deptName = $(this).val();
+
+                if (deptName.length > 0) {
+                    $.ajax({
+                        url: '@Url.Action("CheckDepartmentName", "Department")',
+                        type: 'GET',
+                        data: { name: deptName },
+                        success: function (response) {
+                            if (!response) {
+                                $("#deptNameError").text("Department name already exists.");
+                            } else {
+                                $("#deptNameError").text("");
+                            }
+                        }
+                    });
+                } else {
+                    $("#deptNameError").text("");
+                }
+            });
+        });
+
+        $("form").on("submit", function (e) {
+            if ($("#deptNameError").text().length > 0) {
+                e.preventDefault();
+                alert("Please fix the errors before submitting.");
+            }
+        });
+    </script>
+}
