--- a/My Assessment/Views/Employee/Index.cshtml
+++ b/My Assessment/Views/Employee/Index.cshtml
@@ -5,7 +5,7 @@
 
 <a asp-action="Create" asp-controller="Employee" asp-area="" class="btn btn-primary mb-4">Add New Employee</a>
 
-<table id="productstable" class="table table-bordered table-hover table-striped">
+<table id="productsTable" class="table table-bordered table-hover table-striped">
     <thead>
         <tr>
             <th>Id</th>
@@ -31,11 +31,12 @@
             {
                 <tr>
                     <th>@Employee.Id</th>
-                    <td>
-                        <img src="~/uploads/employees/@Employee.ImagePath" alt="Employee Image" width="100" height="100" />
+                    <td class="text-center">
+                        <img src="~/uploads/employees/@Employee.ImagePath" alt="Employee Image" class="employee-photo" />
                     </td>
+
                     <th>@Employee.FullName</th>
-                    <th>@Employee.Department.Name</th>
+                    <th>@Employee.Department?.Name</th>
                     <th>@Employee.Salary</th>
                     <th>
                         <a asp-action="Update" asp-controller="Employee" asp-route-id="@Employee.Id" class="btn btn-primary">Edit</a>
@@ -50,3 +51,12 @@
         }
     </tbody>
 </table>
+@section Scripts {
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.21/b-1.6.2/b-colvis-1.6.2/b-flash-1.6.2/b-html5-1.6.2/b-print-1.6.2/datatables.min.css" />
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.21/b-1.6.2/b-colvis-1.6.2/b-flash-1.6.2/b-html5-1.6.2/b-print-1.6.2/datatables.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#productsTable').DataTable();
+        });</script>
+}
