--- a/My Assessment/Views/Task/Index.cshtml
+++ b/My Assessment/Views/Task/Index.cshtml
@@ -7,8 +7,8 @@
 <h2>Tasks Management</h2>
 <a asp-action="Create" asp-controller="Task" asp-area="" class="btn btn-primary mb-4">Create New Task</a>
 
-<table class="table table-bordered table-striped">
-    <thead class="table-dark">
+<table id="productsTable" class="table table-bordered table-hover table-striped">
+    <thead >
         <tr>
             <th>Title</th>
             <th>Status</th>
@@ -26,14 +26,7 @@
                     <td>@task.Status</td>
                     <td>@task.Employee?.FullName</td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@task.Id" class="btn btn-sm btn-primary">Edit</a>
-                        <a asp-action="Details" asp-route-id="@task.Id" class="btn btn-sm btn-info">Details</a>
-                        <form asp-action="Delete" asp-route-id="@task.Id" method="post" style="display:inline">
-                            <button type="submit" class="btn btn-sm btn-danger"
-                                    onclick="return confirm('Are you sure you want to delete this task?');">
-                                Delete
-                            </button>
-                        </form>
+                        <a asp-controller="Task" asp-action="Update" asp-route-taskId="@task.Id" class="btn btn-sm btn-primary">Edit</a>
                     </td>
                 </tr>
             }
@@ -46,3 +39,12 @@
         }
     </tbody>
 </table>
+@section Scripts {
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.21/b-1.6.2/b-colvis-1.6.2/b-flash-1.6.2/b-html5-1.6.2/b-print-1.6.2/datatables.min.css" />
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.21/b-1.6.2/b-colvis-1.6.2/b-flash-1.6.2/b-html5-1.6.2/b-print-1.6.2/datatables.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#productsTable').DataTable();
+        });</script>
+}
